@@ -1107,6 +1107,15 @@ name|KEY_SELF_THROTTLE_WRITE_FACTOR
 init|=
 literal|"fs.azure.selfthrottling.write.factor"
 decl_stmt|;
+DECL|field|KEY_ENABLE_STORAGE_CLIENT_LOGGING
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|KEY_ENABLE_STORAGE_CLIENT_LOGGING
+init|=
+literal|"fs.azure.storage.client.logging"
+decl_stmt|;
 DECL|field|PERMISSION_METADATA_KEY
 specifier|private
 specifier|static
@@ -2862,6 +2871,20 @@ argument_list|(
 name|KEY_SELF_THROTTLE_WRITE_FACTOR
 argument_list|,
 name|DEFAULT_SELF_THROTTLE_WRITE_FACTOR
+argument_list|)
+expr_stmt|;
+name|OperationContext
+operator|.
+name|setLoggingEnabledByDefault
+argument_list|(
+name|sessionConfiguration
+operator|.
+name|getBoolean
+argument_list|(
+name|KEY_ENABLE_STORAGE_CLIENT_LOGGING
+argument_list|,
+literal|false
+argument_list|)
 argument_list|)
 expr_stmt|;
 if|if
